--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="#" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Chamber</a>
+                    <a href="chamber/directory.html" class="nav-link">Chamber</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Final</a>
