--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grand-Goave Chamber Of Commerce</title>
 
-    <meta name="description" content="Learn about Mackison Jean Pierre, a WDD 231: Dynamic
-    Web Fundamentals student, including personal background, web development resources, and insights about Grand-Goave, Haiti.">
+    <meta name="description" content="This is a WDD 231 project about Dynamic
+    Web Fundamentals to share web development resources, and insights about Chamber Of Commerce in Grand-Goave, Haiti.">
     <meta name="author" content="Mackison Jean Pierre">
+    <link rel="icon" href="images/favicon.jpg">
+    <meta property="og:url" content="https://24on7store.github.io/wdd231/">
+
+
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/smaller.css">
 
