--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grand-Goave Chamber Of Commerce</title>
+    <title>Grand-Goave</title>
 
-    <meta name="description" content="This is a WDD 231 project about Dynamic
-    Web Fundamentals to share web development resources, and insights about Chamber Of Commerce in Grand-Goave, Haiti.">
+    <!-- <meta name="description" content="This is a WDD 231 project about Dynamic
+    Web Fundamentals to share web development resources, and insights about Chamber Of Commerce in Grand-Goave, Haiti."> -->
+    <meta property="og:description" content="Discover web development insights and 
+    explore the Chamber of Commerce in Grand-Goâve, Haiti.
+    A WDD 231 project showcasing local businesses and digital resources.">
+
     <meta name="author" content="Mackison Jean Pierre">
     <link rel="icon" href="images/favicon.jpg">
     <meta property="og:url" content="https://24on7store.github.io/wdd231/">
@@ -15,11 +19,13 @@
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/smaller.css">
 
-    <meta property="og:url" content="https://github.com/24on7store/wdd131">
+    <!-- <meta property="og:url" content="https://github.com/24on7store/wdd131"> -->
+    <meta property="og:url" content="https://24on7store.github.io/wdd231/chamber/directory.html">
+
     <meta property="og:title" content=" Home Page Enhancement">
     <meta property="og:type" content="website">
 
-    <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k">
+    <meta property="og:image" content="C:\Users\macki\Documents\wdd231\chamber\images\chamber.webp">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" 
     rel="stylesheet">
@@ -147,7 +153,7 @@
 
 
 
-        <script src="js/directory.js">
+        <script src="scripts/directory.js">
         </script>
 </body>
 </html>
