--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grand-Goave</title>
+    <title>Grand-Goave Chamber Of Commerce</title>
 
     <!-- <meta name="description" content="This is a WDD 231 project about Dynamic
     Web Fundamentals to share web development resources, and insights about Chamber Of Commerce in Grand-Goave, Haiti."> -->
@@ -25,7 +25,7 @@
     <meta property="og:title" content=" Home Page Enhancement">
     <meta property="og:type" content="website">
 
-    <meta property="og:image" content="C:\Users\macki\Documents\wdd231\chamber\images\chamber.webp">
+    <meta property="og:image" content="og:image" content="https://24on7store.github.io/wdd231/chamber/images/chamber.webp">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" 
     rel="stylesheet">
@@ -38,8 +38,8 @@
         <section class="header-text">
 
             <img src="images/logochamber.jpg" alt="Temporary logo">
-            <h1>Grand-Goave</h1>
-            <p>Chamber of Commerce</p>
+            <h1>Chamber Of Commerce</h1>
+            <p>Grand-Goave, Haiti</p>
             <!-- <p>Chamber of Commerce</p> -->
         </section>
 
