--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,10 +39,12 @@
     <header>
 
         <section class="header-text">
-            <h1>Grand-Goâve Chamber Directory</h1>
-            <img src="images/logochamber.jpg" alt="Temporary logo">
-            <p>Chamber Of Commerce</p>
 
+            <main>
+                <img src="images/logochamber.jpg" alt="Temporary logo">
+                <h1>Grand-Goâve</h1>
+                <p>Chamber Of Commerce</p>
+                <!-- <p>Chamber of Commerce</p> -->
         </section>
 
 
@@ -71,7 +73,7 @@
         </div>
 
         <!-- <section class="home"> -->
-            <main class="home">
+            <div class="home">
                 
 
             <section class="card1">
@@ -104,6 +106,7 @@
                 </p>
             </section>
 
+            </div>
         </main>
         <!-- <div class="view-buttons"> -->
 
