--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title>Grand-Goave Chamber Of Commerce</title> -->
-    <title>Grand-Goâve Chamber Directory</title>
+    <title>Grand-Goâve</title>
 
 
     <!-- <meta name="description" content="This is a WDD 231 project about Dynamic
