--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title>Grand-Goave Chamber Of Commerce</title> -->
-    <title>Grand-Goâve</title>
+    <title>Grand-Goâve Chamber Directory</title>
 
 
     <!-- <meta name="description" content="This is a WDD 231 project about Dynamic
@@ -38,12 +38,12 @@
 
 <body>
     <header>
-        <h1>Grand-Goâve</h1>
+        <h1>Chamber Of Commerce</h1>
         <section class="header-text">
                 
                 <img src="images/logochamber.jpg" alt="Temporary logo">
                 
-                <h6>Chamber Of Commerce</h6>
+                <h6>Chamber Of Commerce In Grand-Goave</h6>
                 <!-- <p>Chamber of Commerce</p> -->
         </section>
 
