--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title>Grand-Goave Chamber Of Commerce</title> -->
-    <title>Grand-Goâve Chamber Directory</title>
+    <title>Chamber Of Commerce Directory</title>
 
 
     <!-- <meta name="description" content="This is a WDD 231 project about Dynamic
@@ -31,14 +31,14 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" 
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> -->
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/> -->
 </head>
 
 <body>
     <header>
-        <h1>Chamber Of Commerce</h1>
+        <h1>Chamber Directory</h1>
         <section class="header-text">
                 
                 <img src="images/logochamber.jpg" alt="Temporary logo">
