--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,12 +38,13 @@
 
 <body>
     <header>
+    <main>
         <h1>Chamber Directory</h1>
         <section class="header-text">
                 
                 <img src="images/logochamber.jpg" alt="Temporary logo">
                 
-                <h6>Chamber Of Commerce In Grand-Goave</h6>
+                <h6>Grand-Goave Chamber</h6>
                 <!-- <p>Chamber of Commerce</p> -->
         </section>
 
@@ -65,7 +66,6 @@
             </nav>
         </div>
     </header>
-    <main>
 
         <div>
             <h1 class="home-text">Home</h1>
