--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title>Grand-Goave Chamber Of Commerce</title> -->
-    <title>W02 Assignment: Chamber Directory Page</title>
+    <title>Grand-Goâve Chamber of Commerce Business Directory</title>
+
 
 
     <!-- <meta name="description" content="This is a WDD 231 project about Dynamic
@@ -66,7 +67,7 @@
         </div>
     </header>
     <main>
-        <h1 class="head">Chamber Directory</h1>
+        <h1 class="head">Grand-Goave Chamber</h1>
 
         <div>
             <h1 class="home-text">Home</h1>
