--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -66,10 +66,11 @@
         </div>
     </header>
     <main>
+        <h1 class="home-text">Home</h1>
 
-        <div>
+        <!-- <div>
             <h1 class="home-text">Home</h1>
-        </div>
+        </div> -->
 
         <!-- <section class="home"> -->
             <div class="home">
