--- a/chamber/index.html
+++ b/chamber/index.html
@@ -135,10 +135,10 @@
     </main>
         <!-- <div class="view-buttons"> -->
 
-            <div class="view-buttons">
+            <!-- <div class="view-buttons">
                 <button id="grid-view">⏹️ Grid</button>
                 <button id="list-view">📄 List</button>
-            </div>
+            </div> -->
 
 
             <div class="directory">
