--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title>Grand-Goave Chamber Of Commerce</title> -->
-    <title>Grand-Goâve Chamber Directory</title>
+    <title>Home Page</title>
 
 
     <!-- <meta name="description" content="This is a WDD 231 project about Dynamic
@@ -91,8 +91,6 @@
 
             <section class="card1">
                 <h2>Events</h2>
-
-
                 <article>
                 <h3>Grand-Goâve Business Networking Night</h3>
                 <p>Join us on <b>June 15 at 6 PM EST</b> for an evening of 
