--- a/finalproject/siteplan.html
+++ b/finalproject/siteplan.html
@@ -3,31 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Individual Project Site Plan</title>
-  <link rel="stylesheet" href="site-plan.css">
+  <title>My Final Project Site Plan</title>
+  <link rel="stylesheet" href="styles/siteplan.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
-    <h1>Individual Project Site Plan</h1>
+    <h1>WDD231 Final Project Site Plan</h1>
+    <img src="images/logo.png" alt=" Logo of the store">
   </header>
 
   <main>
     <section>
-      <h2>Site Name</h2>
-      <p><strong>MaUniverse</strong> – This name represents a unified digital brand offering services like MaService (web development), Echo Talk (podcast), and 4U Store (e-commerce). It's modern, broad, and emphasizes versatility in one universe.</p>
+      <h2>MaBoutique</h2>
+      <p><strong>MaBoutique</strong> – This store is designed to sell men shoes
+        worldwide, there are shoes for different age range. Buying from us is to meet your satisfaction.
+      When you buy a pair of shoes, you buy comfort, happiness and joy. Choose your happiness with <strong>MaBoutique</strong></p>
     </section>
 
     <section>
       <h2>Site Purpose</h2>
-      <p>The purpose of this website is to serve as a hub for various creative and professional services including motivational podcasts, web development, and an online marketplace—all under the MaUniverse brand.</p>
+      <p>This website is to set a shoe store for men, where they will be able to 
+        choose and buy to different shoe qualities and colors. 
+        I am adding some features like cart, views and so on..</p>
     </section>
 
     <section>
       <h2>Scenarios</h2>
       <ul>
-        <li>How can I book web development services through MaService?</li>
-        <li>Where can I listen to the latest episodes of Echo Talk?</li>
+        <li>How Can I return a pair of shoes?</li>
+        <li>How many days the delivery can take?</li>
       </ul>
     </section>
 
@@ -41,6 +48,34 @@
         <li><strong>Background (White - #FFFFFF):</strong> Page background.</li>
       </ul>
     </section>
+
+    <!-- Table -->
+    <table class="all-table">
+  <tr>
+    <th>Primary Color</th>
+    <th>Accent Color</th> 
+    <th>Text Color</th> 
+    <th>Secondary Color</th>
+    <th>Background Color</th>
+  </tr>
+  <tr>
+    <td class="color1">Indigo(#3F51B5)</td>
+    <td class="color2">Amber(#FFC107)</td>
+    <td class="color3">Dark Gray(#212121)</td>
+    <td class="color4">Gray(#666666)</td>
+    <td class="color5">White(#FFFFFF)</td>
+  </tr>
+  <!-- <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+  <tr>
+    <td>John</td>
+    <td>Doe</td>
+    <td>80</td>
+  </tr> -->
+</table>
 
     <section>
       <h2>Typography</h2>
@@ -61,7 +96,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 MaUniverse | All rights reserved</p>
+    <p>&copy; 2025 MaBoutique | All rights reserved</p>
   </footer>
 </body>
 </html>
