--- a/finalproject/siteplan.html
+++ b/finalproject/siteplan.html
@@ -88,10 +88,14 @@
     <section>
       <h2>Wireframes</h2>
       <p>Below are rough sketches representing the layout of the home page:</p>
-      <ul>
+      <!-- <ul>
         <li><a href="wireframe-mobile.jpg" target="_blank">Mobile View Wireframe</a></li>
         <li><a href="wireframe-desktop.jpg" target="_blank">Desktop View Wireframe</a></li>
-      </ul>
+      </ul> -->
+      <h2>For Larger Device</h2>
+      <img  src="images/siteplandesktop.png" alt="Desktop View"> 
+      <h2>For Smaller Device</h2>
+      <img  src="images/siteplanmobile.png" alt="Desktop View"> 
     </section>
   </main>
 
