--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -83,7 +83,7 @@
 
         <!-- <section class="home"> -->
         <div class="home">
-        <h1>Discover Our Area</h1>
+        <h1>Chamber Directory</h1>
         <div class="sidebar" id="visit-message"></div>
         <section class="grid-container" id="card-container">
         </section>
