--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -74,6 +74,7 @@
     </header>
 
     <main class="core">
+        <h1>Grand-Goâve Chamber Directory</h1>
 
         <!-- <h2 class="home-text">The Discovery Page</h2> -->
 
@@ -83,7 +84,7 @@
 
         <!-- <section class="home"> -->
         <div class="home">
-        <h1>Chamber Directory</h1>
+        <!-- <h1>Grand-Goâve Chamber Directory</h1> -->
         <div class="sidebar" id="visit-message"></div>
         <section class="grid-container" id="card-container">
         </section>
