--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -75,7 +75,7 @@
             Mackison JEAN PIERRE <br>
             &copy; <span id="copyright"></span>  Men Shoe Store <br>  </p>
             <!-- Last Modification:  -->
-            <p><a href="video.html">Watch Video Demo</a></p>
+            <p class="video"><a href="video.html">Watch Video Demo</a></p>
             <p id="lastModified"></p>
     </div>
 
