--- a/finalproject/final.html
+++ b/finalproject/final.html
@@ -71,7 +71,7 @@
             Mackison JEAN PIERRE <br>
             &copy; <span id="copyright"></span>  Men Shoe Store <br>  </p>
             <!-- Last Modification:  -->
-            <p><a href="video.html">Watch The Video</a></p>
+            <p class="video"><a href="video.html">Watch The Video</a></p>
             <p id="lastModified"></p>
     </div>
 
