--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="This store is to promote men shoes">
     <meta name="author" content="Mackison Jean Pierre">
     <meta name="description" content="Explore stylish and comfortable men's shoes.
-    Choose your happiness with MaBoutique." />
+    Choose your happiness with MaBoutique.">
     <link rel="icon" href="images/favicon.jpg">
     <meta property="og:url" content="https://24on7store.github.io/wdd231/">
     <link rel="stylesheet" href="styles/base.css">
@@ -44,13 +44,13 @@
     <main>
     <form method="get" action="contact.html">
 
-        <label for="name">Name:</label>
-        <input type="text" name="name" required />
+        <label id= "name">Name:</label>
+        <input type="text" name="name" required>
 
-        <label for="email">Email:</label>
-        <input type="email" name="email" required />
+        <label id="email">Email:</label>
+        <input type="email" name="email" required>
 
-        <label for="message">Message:</label>
+        <label id="message">Message:</label>
         <textarea name="message" required></textarea>
 
         <button type="submit">Send</button>
