--- a/finalproject/final.html
+++ b/finalproject/final.html
@@ -7,8 +7,7 @@
     <title>MaBoutique | Home</title>
     <meta property="og:description" content="This store is to promote men shoes">
     <meta name="author" content="Mackison Jean Pierre">
-    <meta name="description" content="Explore stylish and comfortable men's shoes.
-    Choose your happiness with MaBoutique." />
+    <meta name="description" content="Explore stylish and comfortable men shoes. Choose your happiness with MaBoutique.">
     <link rel="icon" href="images/favicon.jpg">
     <meta property="og:url" content="https://24on7store.github.io/wdd231/">
     <link rel="stylesheet" href="styles/base.css">
@@ -114,7 +113,7 @@
     <!-- <p>&copy; 2025 MaBoutique | All rights reserved</p> -->
     <!-- <p><a href="video.html">Watch Video Demo</a></p> -->
     </footer>
-    <!-- ---------------JavaScript for Toggle Menu------------ -->
+    <!--JavaScript for Toggle Menu-->
 <script>
     var navLinks = document.getElementById("navLinks");
 
