--- a/finalproject/gallery.html
+++ b/finalproject/gallery.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="This store is to promote men shoes">
     <meta name="author" content="Mackison Jean Pierre">
     <meta name="description" content="Explore stylish and comfortable men's shoes.
-    Choose your happiness with MaBoutique." />
+    Choose your happiness with MaBoutique.">
     <link rel="icon" href="images/favicon.jpg">
     <meta property="og:url" content="https://24on7store.github.io/wdd231/">
     <link rel="stylesheet" href="styles/base.css">
