--- a/finalproject/video.html
+++ b/finalproject/video.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="This store is to promote men shoes">
     <meta name="author" content="Mackison Jean Pierre">
     <meta name="description" content="Explore stylish and comfortable men's shoes.
-    Choose your happiness with MaBoutique." />
+    Choose your happiness with MaBoutique.">
     <link rel="icon" href="images/favicon.jpg">
     <meta property="og:url" content="https://24on7store.github.io/wdd231/">
     <link rel="stylesheet" href="styles/base.css">
@@ -26,11 +26,14 @@
     </header>
 
     <main>
-    <video controls width="100%">
-        <source src="images/demo.mp4" type="video/mp4" />
+    <video controls>
+        <source src="images/demo.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+    <ul>
     <li class="move"><a href="final.html">Go Back To Home Page</a></li>
+    </ul>
+    
     </main>
 
     <footer>
