--- a/finalproject/video.html
+++ b/finalproject/video.html
@@ -22,14 +22,21 @@
 </head>
 <body>
     <header class="video">
-        <h1>Watch the Demo</h1>
+        <h1>Watch the Video</h1>
     </header>
 
     <main>
-    <video controls>
-        <source src="images/demo.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <!-- <video controls> -->
+            <iframe 
+        src="https://www.youtube.com/embed/HaGAhzkrVKw"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+    </iframe>
+
+        <!-- <source src="images/demo.mp4" type="video/mp4"> -->
+    <!-- </video> -->
     <ul>
     <li class="move"><a href="final.html">Go Back To Home Page</a></li>
     </ul>
